<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>

    <string name="Header">My Nanodegree Apps!</string>

    <string name="btn_label_app1">Spotify Streamer</string>
    <string name="btn_toast_app1">This button will launch my Spotify streamer app!</string>

    <string name="btn_label_app2">Scores App</string>
    <string name="btn_toast_app2">This button will launch my scores app!</string>

    <string name="btn_label_app3">Library App</string>
    <string name="btn_toast_app3">This button will launch my library app!</string>

    <string name="btn_label_app4">Build it bigger</string>
    <string name="btn_toast_app4">This button will launch my \'Build it bigger\' app!</string>

    <string name="btn_label_app5">XYZ Reader</string>
    <string name="btn_toast_app5">This button will launch my XYZ reader app!</string>

    <string name="btn_label_app6">Capstone: My own app</string>
    <string name="btn_toast_app6">This button will launch my capstone app!</string>
</resources>
