<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:text="@string/Header"
        style="@style/Header" />

    <Button
        android:text="@string/btn_label_app1"
        android:id="@+id/button"
        style="@style/ApplicationButton"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <Button
        android:text="@string/btn_label_app2"
        android:id="@+id/button2"
        style="@style/ApplicationButton"
        android:layout_below="@+id/button"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <Button
        android:text="@string/btn_label_app3"
        android:id="@+id/button3"
        style="@style/ApplicationButton"
        android:layout_below="@+id/button2"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <Button
        android:text="@string/btn_label_app4"
        android:id="@+id/button4"
        style="@style/ApplicationButton"
        android:layout_below="@+id/button3"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <Button
        android:text="@string/btn_label_app5"
        android:id="@+id/button5"
        style="@style/ApplicationButton"
        android:layout_below="@+id/button4"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <Button
        android:text="@string/btn_label_app6"
        android:id="@+id/button6"
        android:background="@color/colorRed"
        android:textColor="@color/colorWhite"
        style="@style/ApplicationButton"
        android:layout_below="@+id/button5"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

</RelativeLayout>
